# zuzu-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/zuzu-analysis/: Cargo.toml
crates/zuzu-analysis/src/: lib.rs
crates/zuzu-analysis/tests/: fixture.rs  performance.rs
crates/zuzu-lsp/: Cargo.toml
crates/zuzu-lsp/src/: main.rs
crates/zuzu-lsp/tests/: cli.rs  stdio.rs
crates/zuzu-toolchain/: Cargo.toml
crates/zuzu-toolchain/src/: lib.rs
fixtures/workspaces/basic/: zuzu-distribution.json
fixtures/workspaces/basic/modules/example/: math.zzm
fixtures/workspaces/basic/runtime-modules/std/: demo.zzm
fixtures/workspaces/basic/scripts/: demo.zzs
fixtures/workspaces/basic/tests/: example.zzs
