[workspace]
members = [
	"crates/zuzu-analysis",
	"crates/zuzu-lsp",
	"crates/zuzu-toolchain",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/zuzuscript/zuzu-lsp"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tree-sitter = "0.25"
tree-sitter-zuzu = { git = "https://github.com/zuzuscript/tree-sitter-zuzu", rev = "8593148756686092d0ac547ae868fca5d1b604a3" }
url = "2.5"
walkdir = "2.5"
