[package]
name = "zuzu-analysis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-zuzu.workspace = true
url.workspace = true
walkdir.workspace = true
