[package]
name = "zuzu-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Toby Inkster <zuzu@toby.ink>"]
description = "Language server for ZuzuScript"

[package.metadata.deb]
maintainer = "Toby Inkster <zuzu@toby.ink>"
copyright = "2026, Toby Inkster <zuzu@toby.ink>"
section = "devel"
priority = "optional"
extended-description = """\
zuzu-lsp is an editor-independent language server for ZuzuScript.
Install it and point your editor at the binary; no runtime is required for
syntax diagnostics. Runtime diagnostics are enabled automatically when a zuzu
binary is found on the PATH."""

[dependencies]
anyhow.workspace = true
clap.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
ropey.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-zuzu.workspace = true
url.workspace = true
zuzu-analysis = { path = "../zuzu-analysis" }
zuzu-toolchain = { path = "../zuzu-toolchain" }
